2008-02-21  Rob Bradford  <rob@openedhand.com>

	* psplash.c: (main):
	Revert artwork. Needs more love.

2008-02-21  Rob Bradford  <rob@openedhand.com>

	* psplash-poky-img.h:
	* psplash.c: (main):
	Try new artwork.

2007-03-28  Richard Purdie  <rpurdie@openedhand.com>

	* psplash.c:
	Add support for negative progress values

2007-02-16  Matthew Allum  <mallum@openedhand.com>

	* README:
	* configure.ac:
	* psplash.doap:
	Update for 0.1 release

2006-12-22  Matthew Allum  <mallum@openedhand.com>

	* psplash-fb.c:
	* psplash.c:
	More rotation tweaks

2006-12-22  Matthew Allum  <mallum@openedhand.com>

	* psplash.c:
	Whoops, actually set the angle config option

2006-12-22  Matthew Allum  <mallum@openedhand.com>

	* psplash-fb.c:
	* psplash-fb.h:
	* psplash.c:
	Add -angle cmd line arg, hopefully fix rotation

2006-12-19  Matthew Allum  <mallum@openedhand.com>

	* psplash-fb.c:
	* psplash-fb.h:
	* psplash.c:
	Add some as yet tested basic rotation code.
	* psplash.h:
	Disable DBG output by default.

2006-11-21  Richard Purdie  <rpurdie@openedhand.com>

	* psplash-write.c:
	Disable error message when the fifo doesn't exist.

2006-11-21  Matthew Allum  <mallum@openedhand.com>

	* psplash.c: (main):
	Add some more commenting
	* psplash.doap:
	Add DOAP file.

2006-09-28  Matthew Allum  <mallum@openedhand.com>

	* psplash-bar-img.h:
	pixel pop a little
	* psplash.c: (psplash_draw_progress), (main):
	Move bar up a little.

2006-09-28  Matthew Allum  <mallum@openedhand.com>

	* psplash.c: (psplash_draw_progress), (main):
	img positioning tweaks.

2006-09-28  Matthew Allum  <mallum@openedhand.com>

	* Makefile.am:
	* make-image-header.sh:
	* psplash-bar-img.h:
	* psplash-hand-img.h:
	* psplash.c: (psplash_draw_msg), (psplash_draw_progress), (main):
	Add new hopefully nicer untested images.
	
	* psplash-image.h:
	Remove

2006-09-08  Matthew Allum  <mallum@openedhand.com>

	* Makefile.am:
	* radeon-font.h:
	Add 'compiled' font.

	* psplash-fb.c:
	* psplash-fb.h:
	* psplash.c: